--- a/pdf2anki-beta.html
+++ b/pdf2anki-beta.html
@@ -106,6 +106,7 @@
               <!-- <a href="#" class="download-btn"><i class="bx bxl-play-store"></i> Google Play</a>-->
 
               <br><small class="text-light">Thanks for joining our private beta!</small>
+              <br><small class="text-light">Save this domain www.tabmed.hk/pdf2anki-beta for future use.</small>
               <!-- <a href="https://docs.google.com/forms/d/1epN9MZ1ep5TM94BVjWQAzQy7Bfb1O4MSzO5xWdPSgms/viewform?edit_requested=true" target="_blank" style="text-decoration:none"><button id="myBtn"  class="download-btn"><i class="bi bi-briefcase-fill"></i>Use Cases</button></a> -->
 
             </div>
