--- a/makegpt.html
+++ b/makegpt.html
@@ -611,18 +611,13 @@
           // Set the URL for the Botpress WebChat JavaScript file and the messaging server
           "hostUrl": "https://cdn.botpress.cloud/webchat/v0",
           "messagingUrl": "https://messaging.botpress.cloud",
+          "composerPlaceholder": "Start by saying \"Hi\"",
 
           // Set the name of the bot that will be displayed in the WebChat interface
           "botName": "Tab AI",
           "botConversationDescription": "Trained on tabmed.hk",
 
-          // Set the width of the WebChat container and layout to 100% (Full Screen)
-          "containerWidth": "100%25",
-          "layoutWidth": "100%25",
 
-          // Hide the widget and disable animations
-          "hideWidget": true,
-          "disableAnimations": true,
 
           "stylesheet": "https://webchat-styler-css.botpress.app/prod/eb531400-3e2e-4b5e-bf83-75ffe1653ded/v13699/style.css",
 
