removed live demo as cannot afford stammer yet

--- a/makegpt.html
+++ b/makegpt.html
@@ -265,8 +265,8 @@
       </section>
         <!--====== VIDEO ONE PART ENDS ======-->
 
-        <!--====== VIDEO ONE PART START ======-->
-        <section class="video-area video-one">
+        <!--====== live demo======-->
+        <!-- <section class="video-area video-one">
            <div class="container">
               <div class="row justify-content-center">
                  <div class="col-lg-6 col-md-10">
@@ -279,20 +279,20 @@
                        <button id="myBtn" onclick="window.botpressWebChat.sendEvent({ type: 'show' });" class="download-btn"><i class="bi bi-people-fill"></i>Talk to Tab</button>
 
                     </div>
-                    <!-- video title -->
+
                  </div>
               </div>
-              <!-- row -->
+
               <div class="row justify-content-center">
                  <div class="col-lg-10">
 
-                    <!-- <iframe src="https://app.tabmed.hk/chatbot/embed/95574d6c-d5e7-4629-9bf0-543d52c2bca1" width="100%" height="600" frameborder="0" ></iframe> -->
+                    <iframe src="https://app.tabmed.hk/chatbot/embed/95574d6c-d5e7-4629-9bf0-543d52c2bca1" width="100%" height="600" frameborder="0" ></iframe>
                  </div>
               </div>
-              <!-- row -->
+
            </div>
-           <!-- container -->
-        </section>
+
+        </section> -->
         <!--====== VIDEO ONE PART ENDS ======-->
 
         <!-- ======= Details Section ======= -->
@@ -597,7 +597,7 @@
   <script src="assets/js/wave.js"></script>
 
   <!-- AI BotPress -->
-
+<!-- 
   <script src="https://cdn.botpress.cloud/webchat/v0/inject.js"></script>
   <script>
     window.botpressWebChat.init({
@@ -616,7 +616,7 @@
   const element = document.getElementById("myBtn");
   element.addEventListener("click", myFunction1);
   function myFunction1() { window.botpressWebChat.sendEvent({ type: 'show' }) }
-  </script>
+  </script> -->
 
 
   <!-- End of ChatBot code -->
