changed links on makegpt page

--- a/makegpt.html
+++ b/makegpt.html
@@ -230,7 +230,7 @@
             </p>
             <a href="pricing.html" target="_blank" style="text-decoration:none"><button id="myBtn"  class="trial-btn"><i class="bi bi-arrow-right-short"></i>Build Your Chatbot Now</button></a>
             <div class="mt-3">
-              <small><a href="pricing.html" class = "link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" target="_blank" style="text-decoration:none"><u>Or contact us for any questions you might have</u></a></small>
+              <small><a href="mailto: agency@tabmed.hk" class = "link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" target="_blank" style="text-decoration:none"><u>Or contact us for any questions you might have</u></a></small>
             </div>
           </div>
         </div>
@@ -315,7 +315,7 @@
                   <li>📝 Word Documents</li>
                   <li>🖊️ Text and Q&A</li>
                 </ul>
-                <a href="features/data-training" class="download-btn"><i class="bi bi-arrow-right"></i>Explore Data Training</a>
+                <!-- <a href="features/data-training" class="download-btn"><i class="bi bi-arrow-right"></i>Explore Data Training</a> -->
 
               </div>
             </div>
@@ -339,7 +339,7 @@
                   <li>🗂️ Code, JSON, unstructured to structured data output</li>
                 </ul>
 
-                <a href="features/prompt-engineering" class="download-btn"><i class="bi bi-arrow-right"></i>Explore Prompt Engineering</a>
+                <!-- <a href="features/prompt-engineering" class="download-btn"><i class="bi bi-arrow-right"></i>Explore Prompt Engineering</a> -->
 
               </div>
             </div>
@@ -355,7 +355,7 @@
                   Access conversation histories effortlessly and view previous interactions for valuable insights, seamless continuity, and strategic adjustments.
                 </p>
 
-                <a href="features/prompt-engineering" class="download-btn"><i class="bi bi-arrow-right"></i>Explore Conversation Monitoring</a>
+                <!-- <a href="features/prompt-engineering" class="download-btn"><i class="bi bi-arrow-right"></i>Explore Conversation Monitoring</a> -->
 
               </div>
             </div>
@@ -369,7 +369,7 @@
                 <h3>AI Response Refinement</h3>
                 <p>Take control with Tabmed AI's retraining feature. Our platform enables you to identify sub-optimal responses and refine them for better user interactions. It's about continuous improvement and learning from experience - because even the smartest AI needs a little guidance now and then. Mold your AI chatbot to provide more accurate, relevant, and engaging responses, ensuring optimal performance at all times.</p>
 
-                <a href="features/prompt-engineering" class="download-btn"><i class="bi bi-arrow-right"></i>Explore AI Response Refinement</a>
+                <!-- <a href="features/prompt-engineering" class="download-btn"><i class="bi bi-arrow-right"></i>Explore AI Response Refinement</a> -->
 
 
               </div>
@@ -391,7 +391,7 @@
                   <li>📱 Embedding it in your mobile app via iframe and WebKit/WebView</li>
 
                 </ul>
-                <a href="features/prompt-engineering" class="download-btn"><i class="bi bi-arrow-right"></i>Explore Web & App Embedding</a>
+                <!-- <a href="features/prompt-engineering" class="download-btn"><i class="bi bi-arrow-right"></i>Explore Web & App Embedding</a> -->
 
               </div>
             </div>
@@ -413,7 +413,7 @@
 
           <a href="pricing.html" style="text-decoration:none"><button id="myBtn"  class="trial-btn mt-5"><i class="bi bi-arrow-right-short"></i>Build Your Chatbot Now</button></a>
           <div class="mt-3">
-            <small><a href="pricing.html" class = "link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" target="_blank" style="text-decoration:none"><u>Or contact us for any questions you might have</u></a></small>
+            <small><a href="mailto: agency@tabmed.hk" class = "link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" target="_blank" style="text-decoration:none"><u>Or contact us for any questions you might have</u></a></small>
           </div>
 
       	</div>
@@ -597,7 +597,7 @@
   <script src="assets/js/wave.js"></script>
 
   <!-- AI BotPress -->
-<!-- 
+<!--
   <script src="https://cdn.botpress.cloud/webchat/v0/inject.js"></script>
   <script>
     window.botpressWebChat.init({
