--- a/agency.html
+++ b/agency.html
@@ -99,7 +99,7 @@
 
             <a href="tel:+85268333398‬" target="_blank" style="text-decoration:none"><button id="myBtn"  class="download-btn"><i class="bi bi-telephone-fill"></i>Call Us</button></a>
             <a href="https://wa.me/85269025557" target="_blank" style="text-decoration:none"><button id="myBtn"  class="download-btn"><i class="bi bi-whatsapp"></i>WhatsApp Us</button></a>
-            <a target="_blank" style="text-decoration:none" href="mailto: tabmedhk@gmail.com"><button id="myBtn"  class="download-btn"><i class="bi bi-envelope-heart-fill"></i>Email Us</button></a>
+            <a target="_blank" style="text-decoration:none" href="mailto: agency@tabmed.hk"><button id="myBtn"  class="download-btn"><i class="bi bi-envelope-heart-fill"></i>Email Us</button></a>
             <br><small>*Custom chatbots and AI solutions can be integrated with Airtable, Asana, Basecamp, Facebook Messenger, Github, Gmail, Hootsuite, Hubspot, Instagram, Intercom, Jira, LINE, Linear, Mailchimp, Microsoft Teams, Notion, Salesforce, Shopify, Slack, Stripe, Sunshine, Telegram, Trello, Twilio, Viber, Vonage, WhatsApp, Zapier, Zendesk, Zoom.</small>
 
 
