--- a/pdf2anki-beta.html
+++ b/pdf2anki-beta.html
@@ -132,7 +132,7 @@
         <!-- <a style="text-decoration:none" href="ai"><button id="myBtn"  class="download-btn"><i class="bi bi-arrow-down-right-square-fill"></i>Learn more</button></a> -->
 
         <iframe
-          src="https://pdf2anki.streamlit.app/?embed=true&embed_options=light_theme&embed_options=disable_scrolling"
+          src="https://pdf2anki.streamlit.app/?embed=true&embed_options=light_theme"
           height="1200"
           style="width:100%;border:none;"
         ></iframe>
