added live demo

--- a/makegpt.html
+++ b/makegpt.html
@@ -266,7 +266,7 @@
         <!--====== VIDEO ONE PART ENDS ======-->
 
         <!--====== live demo======-->
-        <!-- <section class="video-area video-one">
+        <section class="video-area video-one">
            <div class="container">
               <div class="row justify-content-center">
                  <div class="col-lg-6 col-md-10">
@@ -285,14 +285,13 @@
 
               <div class="row justify-content-center">
                  <div class="col-lg-10">
-
-                    <iframe src="https://app.tabmed.hk/chatbot/embed/95574d6c-d5e7-4629-9bf0-543d52c2bca1" width="100%" height="600" frameborder="0" ></iframe>
+                    <iframe src="https://app.stammer.ai/chatbot/embed/ef8f6a75-2d64-4ca7-af17-38edaa2400fe" width="100%" height="600" frameborder="0" ></iframe>
                  </div>
               </div>
 
            </div>
 
-        </section> -->
+        </section>
         <!--====== VIDEO ONE PART ENDS ======-->
 
         <!-- ======= Details Section ======= -->
