--- a/pdf2anki-beta.html
+++ b/pdf2anki-beta.html
@@ -129,7 +129,7 @@
       <div class="section-title">
 
         <h1>👇 Pre-release Demo</h1>
-        <!-- <a style="text-decoration:none" href="ai"><button id="myBtn"  class="download-btn"><i class="bi bi-arrow-down-right-square-fill"></i>Learn more</button></a> -->
+        <small><a href="https://student.tabmed.hk/" class = "link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" style="text-decoration:none"><u>Demand is very high guys! 🤯 Press here to open our alternative web app if the app below is not working.</u></a></small>
 
         <iframe
           src="https://pdf2anki.streamlit.app/?embed=true&embed_options=light_theme"
