added coffee donation

--- a/pdf2anki-beta.html
+++ b/pdf2anki-beta.html
@@ -107,6 +107,8 @@
 
               <br><small class="text-light">Thanks for joining our private beta!</small>
               <br><small class="text-light">Save this domain www.tabmed.hk/pdf2anki-beta for future use.</small>
+              <br><small class="text-light">Support future development and keep PDF2Anki for free forever by donating us a coffee: </small>
+              <script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="tabmed" data-color="#FFDD00" data-emoji=""  data-font="Cookie" data-text="Buy us a coffee" data-outline-color="#000000" data-font-color="#000000" data-coffee-color="#ffffff" ></script>
               <!-- <a href="https://docs.google.com/forms/d/1epN9MZ1ep5TM94BVjWQAzQy7Bfb1O4MSzO5xWdPSgms/viewform?edit_requested=true" target="_blank" style="text-decoration:none"><button id="myBtn"  class="download-btn"><i class="bi bi-briefcase-fill"></i>Use Cases</button></a> -->
 
             </div>
@@ -229,7 +231,7 @@
       </div>
   </footer><!-- End Footer -->
 
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <!-- <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a> -->
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/aos/aos.js"></script>
@@ -242,7 +244,7 @@
   <script src="assets/js/main.js"></script>
 
   <!-- Start of ChatBot (www.chatbot.com) code -->
-<script type="text/javascript">
+  <script type="text/javascript">
     window.__be = window.__be || {};
     window.__be.id = "63e8b65585e1c300072091d6";
     (function() {
@@ -252,6 +254,7 @@
     })();
 </script>
 <!-- End of ChatBot code -->
+  <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="tabmed" data-description="Support me on Buy me a coffee!" data-message="Support future development and keep PDF2Anki for free forever by donating us a coffee." data-color="#FF5F5F" data-position="Right" data-x_margin="18" data-y_margin="18"></script>
 
 </body>
 
