added change log and feature request

--- a/pdf2anki-beta.html
+++ b/pdf2anki-beta.html
@@ -108,8 +108,9 @@
               <br><small class="text-light">Thanks for joining our private beta!</small>
               <br><small class="text-light">Save this domain www.tabmed.hk/pdf2anki-beta for future use.</small>
               <br><small class="text-light">Support future development and keep PDF2Anki for free forever by donating us a coffee: </small>
-              <script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="tabmed" data-color="#FFDD00" data-emoji=""  data-font="Cookie" data-text="Buy us a coffee" data-outline-color="#000000" data-font-color="#000000" data-coffee-color="#ffffff" ></script>
+              <div class="mt-3 mb-3"><script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="tabmed" data-color="#FFDD00" data-emoji=""  data-font="Cookie" data-text="Buy us a coffee" data-outline-color="#000000" data-font-color="#000000" data-coffee-color="#ffffff" ></script></div>
               <!-- <a href="https://docs.google.com/forms/d/1epN9MZ1ep5TM94BVjWQAzQy7Bfb1O4MSzO5xWdPSgms/viewform?edit_requested=true" target="_blank" style="text-decoration:none"><button id="myBtn"  class="download-btn"><i class="bi bi-briefcase-fill"></i>Use Cases</button></a> -->
+              <a href="https://forms.gle/3JFj4e4yVgzqTvJw9" target="_blank" style="text-decoration:none"><button id="myBtn"  class="download-btn"><i class="bi bi-envelope-heart-fill"></i>Feature Request / Bug Report for PDF2Anki</button></a>
 
             </div>
           </div>
@@ -142,6 +143,31 @@
 
 
 
+    </div>
+    <div  class="container">
+      <a href="https://forms.gle/3JFj4e4yVgzqTvJw9" target="_blank" style="text-decoration:none"><button id="myBtn"  class="download-btn"><i class="bi bi-envelope-heart-fill"></i>Feature Request / Bug Report for PDF2Anki</button></a>
+      <h4 class ="mt-5">Change Log</h3>
+      <p>
+        19 July 2023 - Added Spanish, French, German, Traditional and Simplified Chinese support (might be still buggy for non-english languages)
+      </p>
+      <p>
+        18 July 2023 - Fixed some prompting issues.
+      </p>
+      <p>
+        17 July 2023 - Added temperature slider and loading bar.
+      </p>
+      <p>
+        17 July 2023 - Added live visualisation of chunk and generated flashacards.
+      </p>
+      <p>
+        17 July 2023 - New alternative sever host to handle huge increasingly demand.
+      </p>
+      <p>
+        16 July 2023 - Refined base prompt and chunk size overlap.
+      </p>
+      <p>
+        16 July 2023 - Added direct .apkg support to import into Anki.
+      </p>
     </div>
 
 
