--- a/makegpt.html
+++ b/makegpt.html
@@ -256,7 +256,7 @@
             <div class="row justify-content-center">
                <div class="col-lg-10">
 
-                  <div style="position: relative; padding-bottom: 62.5%; height: 0;"><iframe src="https://www.loom.com/embed/34362ef55a4847d78cf2e096010ea564?sid=4397aa02-acb2-41a1-b4c8-1e17f2397756" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe></div>
+                  <div style="position: relative; padding-bottom: 62.5%; height: 0;"><iframe src="https://www.loom.com/embed/34362ef55a4847d78cf2e096010ea564?sid=4397aa02-acb2-41a1-b4c8-1e17f2397756" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe><iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" src="https://www.youtube.com/embed/5xZIHrDwaTQ?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
                </div>
             </div>
             <!-- row -->
